veil-tests/src/compile_tests/fail/redactable_inner_flags.rs
fn main() {}

#[derive(veil::Redactable)]
struct Foo {
    #[redact(partial)]
    bar: String
}
